# PBL_game

./: .gitignore  CMakeLists.txt  Readme.txt
res/: animatedTextureShader.fs  blueprintShader.fs  blueprintShader.vs  cloudFragShader.fs  cloudVecShader.vs  fragLightObjectShader.fs  fragShader.fs  glowstickShader.fs  glowstickShader.vs  instanceFragShader.fs  instanceVecShader.vs  instancedFragShader.fs  instancedMetalFragShader.fs  instancedMetalVecShader.vs  instancedPlasticFragShader.fs  instancedPlasticVecShader.vs  instancedSandFragShader.fs  instancedSandVecShader.vs  instancedVecShader.vs  outlineShader.fs  outlineShader.vs  particleCompute.glsl  particleShader.fs  particleShader.vs  shadowInstanceShader.vs  shovelShader.fs  skyboxFragShader.fs  skyboxReflectionShader.fs  skyboxReflectionShader.vs  textShader.fs  textureShader.fs  textureShader.vs  textureShaderColor.vs  toonShader.fs  turretRange.fs  turretRange.vs  vecShader.vs  wireframeShader.fs  wireframeShader.vs
scenes/: bezStartowych.json  test-audio.json  (+10 more)
src/: AnimatedTexture.h  AudioContext.cpp  BatchRandomGenerator.cpp  BatchRandomGenerator.h  Block.cpp  Block.h  BlockData.cpp  BlockData.h  BlockManager.cpp  BlockManager.h  CMakeLists.txt  Component.cpp  Component.h  ComputeShader.h  CylinderRenderer.h  DoorComponent.h  Framebuffer.cpp  Framebuffer.h  InstanceObject.h  InstanceRenderer.h  MeshRenderer.h  Node.cpp  Node.h  OrbitRenderer.h  ParticleGenerator.cpp  ParticleGenerator.h  PlanetController.h  Sound.cpp  Sound.h  StaticBlockController.cpp  StaticBlockController.h  TimeController.h  Transform.h  WindSimulation.cpp  WindSimulation.h  camera.h  main.cpp  mesh.h  model.h  shader_s.h  (+2 more)
src/Balance/: Balancer.cpp  Balancer.h
src/Component/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  AudioSource.cpp  AudioSource.h  Block.cpp  Block.h  BlockData.cpp  BlockData.h  BlockManager.cpp  BlockManager.h  Camera.cpp  Camera.h  CloudManager.cpp  CloudManager.h  CompassController.cpp  CompassController.h  Disabler.cpp  Disabler.h  FrustumCulling.cpp  FrustumCulling.h  GlowstickMovement.cpp  GlowstickMovement.h  InstanceRenderer.cpp  InstanceRenderer.h  MeshRenderer.cpp  MeshRenderer.h  PDAController.cpp  PDAController.h  PlayerAudioController.cpp  PlayerAudioController.h  PlayerController.cpp  PlayerController.h  PlayerMovement.cpp  PlayerMovement.h  RefuelStation.cpp  RefuelStation.h  Rotate.cpp  Rotate.h  (+14 more)
src/Core/: Component.cpp  Component.h  ComponentTypeEnum.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  Node.cpp  Node.h  Time.cpp  Time.h
src/Enemies/: EnemiesAIManager.cpp  EnemiesAIManager.h  EnemiesManager.cpp  EnemiesManager.h  Enemy.cpp  Enemy.h  EnemyAI.cpp  EnemyAI.h
src/Gui/: ImguiHierarchy.cpp  ImguiHierarchy.h  ImguiInspector.cpp  ImguiInspector.h  ImguiMain.cpp  ImguiMain.h
src/HUD/: CoordsConverter.cpp  CoordsConverter.h  HUDMain.cpp  HUDMain.h  PageManager.cpp  PageManager.h
src/HUD/Buttons/: Button.cpp  Button.h  QuitButton.cpp  QuitButton.h  ResumeButton.cpp  ResumeButton.h  SettingsButton.cpp  SettingsButton.h
src/HUD/Buttons/DomeUpgrades/: UpgradeDomeHP.cpp  UpgradeDomeHP.h
src/HUD/Buttons/MainMenu/: MainMenuCreditsButton.cpp  MainMenuCreditsButton.h  MainMenuQuitButton.cpp  MainMenuQuitButton.h  MainMenuSettingsButton.cpp  MainMenuSettingsButton.h  MainMenuStartButton.cpp  MainMenuStartButton.h
src/HUD/Buttons/MessagePage/: ContinueMessageButton.cpp  ContinueMessageButton.h
src/HUD/Buttons/PauseMenu/: QuitButton.cpp  QuitButton.h  ResumeButton.cpp  ResumeButton.h  SettingsButton.cpp  SettingsButton.h
src/HUD/Buttons/Player/: JetpackRefuel.cpp  JetpackRefuel.h  UpgradeRadius.cpp  UpgradeRadius.h  UpgradeReach.cpp  UpgradeReach.h  UpgradeSpeed.cpp  UpgradeSpeed.h
src/HUD/Buttons/PlayerUpgrades/: UpgradeRadius.cpp  UpgradeRadius.h  UpgradeReach.cpp  UpgradeReach.h
src/HUD/Buttons/TurretUpgrades/: UpgradeDamage.cpp  UpgradeDamage.h  UpgradeFireRate.cpp  UpgradeFireRate.h
src/HUD/Image/: ImageHUD.cpp  ImageHUD.h  ImageRenderer.cpp  ImageRenderer.h
src/HUD/Pages/: Page.cpp  Page.h  PauseMenuPage.cpp  PauseMenuPage.h  PlayerUpgradeMenu.cpp  PlayerUpgradeMenu.h
src/HUD/Pages/Controls/: ControlsPage.cpp  ControlsPage.h
src/HUD/Pages/CreditsPage/: CreditsPage.cpp  CreditsPage.h
src/HUD/Pages/DialogPage/: DialogPage.cpp  DialogPage.h
src/HUD/Pages/DomeUpgradeMenu/: DomeUpgradeMenu.cpp  DomeUpgradeMenu.h
src/HUD/Pages/MainMenuControls/: MainMenuControls.cpp  MainMenuControls.h
src/HUD/Pages/MainMenuPage/: MainMenuPage.cpp  MainMenuPage.h
src/HUD/Pages/MainMenuSettings/: MainMenuSettingsPage.cpp  MainMenuSettingsPage.h
src/HUD/Pages/MessagePage/: MessagePage.cpp  MessagePage.h
src/HUD/Pages/PDA/: PDAPage.cpp  PDAPage.h
src/HUD/Pages/PauseMenu/: PauseMenuPage.cpp  PauseMenuPage.h
src/HUD/Pages/PlayerUpgradeMenu/: PlayerUpgradeMenu.cpp  PlayerUpgradeMenu.h
src/HUD/Pages/RestartPage/: RestartPage.cpp  RestartPage.h
src/HUD/Pages/Settings/: SettingsPage.cpp  SettingsPage.h
src/HUD/Pages/TurretUpgradeMenu/: TurretUpgradeMenu.cpp  TurretUpgradeMenu.h
src/HUD/Text/: TextRenderer.cpp  TextRenderer.h
src/Managers/: AudioEngineManager.cpp  AudioEngineManager.h  AudioManager.cpp  AudioManager.h  ComponentsManager.cpp  ComponentsManager.h  DomeManager.cpp  DomeManager.h  GameManager.cpp  GameManager.h  LightsManager.cpp  LightsManager.h  NodesManager.cpp  NodesManager.h  ResourceManager.cpp  ResourceManager.h  ResourceMapsManager.cpp  ResourceMapsManager.h  SceneManager.cpp  SceneManager.h  TransparentRenderer.cpp  TransparentRenderer.h  TutorialManager.cpp  TutorialManager.h  UpgradeManager.cpp  UpgradeManager.h  WeatherManager.cpp  WeatherManager.h
src/Turrets/: Turret.cpp  Turret.h  TurretsManager.cpp  TurretsManager.h
(+205 files in other folders)
